--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,21 @@
-@import 'libs/bootstrap-reboot.min';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import "libs/bootstrap-reboot.min";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+
+@import "base/_variables.scss";
+@import "base/_mixins.scss";
+
+@import "blocks/_promo.scss";
+@import "blocks/_title.scss";
+@import "blocks/_button.scss";
+@import "blocks/_sidepanel.scss";
 
 * {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
 }
