feat: add hamburger menu

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/_title.scss";
 @import "blocks/_button.scss";
 @import "blocks/_sidepanel.scss";
+@import "blocks/_menu.scss";
 
 * {
   font-family: "Poppins", sans-serif;
