feat: add skills'  description

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,8 @@
 @import "blocks/_button.scss";
 @import "blocks/_sidepanel.scss";
 @import "blocks/_menu.scss";
+@import "blocks/_about.scss";
+@import "blocks/_divider.scss";
 
 * {
   font-family: "Poppins", sans-serif;
