--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/_menu.scss";
 @import "blocks/_about.scss";
 @import "blocks/_divider.scss";
+@import "blocks/_resume.scss";
 
 * {
   font-family: "Poppins", sans-serif;
