--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -13,11 +13,16 @@
     line-height: 24px;
   }
 
-  &_fz48 {
-    font-size: 48px;
+  &_fz20 {
+    font-size: 20px;
+    line-height: 30px;
   }
-  
+
   &_fz36 {
     font-style: 36px;
+  }
+
+  &_fz48 {
+    font-size: 48px;
   }
 }
