--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/_about.scss";
 @import "blocks/_divider.scss";
 @import "blocks/_resume.scss";
+@import "blocks/_skills.scss";
 
 * {
   font-family: "Poppins", sans-serif;
