feat: create section with works

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,8 @@
 @import "blocks/_divider.scss";
 @import "blocks/_resume.scss";
 @import "blocks/_skills.scss";
+@import "blocks/_portfolio.scss";
+
 
 * {
   font-family: "Poppins", sans-serif;
